# TIASvc

./: .env  .env.example  .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/usecase/: chain_service.rs  database_service.rs  mod.rs  payment_service.rs  web3_service.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/entity/: mod.rs
crates/domain/src/repository/: chain_repository.rs  database_repository.rs  mod.rs  payment_repository.rs  web3_repository.rs
crates/domain/src/shared/: dtos.rs
crates/framework/: Cargo.toml
crates/framework/src/: handler.rs  handlers.rs  helper.rs  lib.rs  route.rs
crates/framework/src/dto/: mod.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs
crates/infra/src/celestia_repository/: mod.rs
crates/infra/src/circle_repository/: mod.rs  request_model.rs
crates/infra/src/contract_abi/: mod.rs
crates/infra/src/infura_repository/: mod.rs
crates/infra/src/postgres_repository/: mod.rs
main/: Cargo.toml
main/src/: main.rs
