[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
framework = { path = "../crates/framework" }
infra = { path = "../crates/infra" }
rocket = { version = "0.5.1", default-features = false }
dotenv = { version = "0.15.0", default-features = false }
lambda_http = { version = "0.14.0", default-features = false, features = [
    "apigw_rest",
    "apigw_http",
    "alb",
] }
