[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.86", default-features = false }
anyhow = { version = "1.0.95", default-features = false }
celestia-types = { version = "0.10.0", default-features = false }
celestia-rpc = { version = "0.9.0", default-features = false }