[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.86", default-features = false }
anyhow = { version = "1.0.95", default-features = false }
celestia-types = { version = "0.10.0", default-features = false }
celestia-rpc = { version = "0.9.0", default-features = false }
serde = { version = "1.0.217", default-features = false }
serde_json = { version = "1.0.138", default-features = false }
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.8", default-features = false, features = [
    "derive",
    "json",
    "tls-rustls",
] }
