[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", default-features = false }
serde_json = { version = "1.0.138", default-features = false }
infra = { path = "../infra" }
app = { path = "../app" }
domain = { path = "../domain" }
lambda_http = { version = "0.14.0", default-features = false, features = [
    "apigw_rest",
    "apigw_http",
    "alb",
] }
base64 = { version = "0.22.1", default-features = false }