[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.12.1", features = ["v4"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.217"
serde_json = "1.0.138"
async-trait = "0.1.86"
domain = { path = "../domain" }
celestia-types = { version = "0.10.0", default-features = false }
celestia-rpc = { version = "0.9.0", default-features = false }
jsonrpsee = { version = "0.24.2", features = [
    "client-core",
    "macros",
    "http-client",
    "ws-client",
] }
ethers = "2.0"
eyre = "0.6.8"
anyhow = "1.0.95"
