[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.12.1", features = ["v4"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.217", default-features = false }
serde_json = { version = "1.0.138", default-features = false }
async-trait = { version = "0.1.86", default-features = false }
domain = { path = "../domain" }
celestia-types = { version = "0.10.0", default-features = false }
celestia-rpc = { version = "0.9.0", default-features = false }
jsonrpsee = { version = "0.24.2", features = [
    "client-core",
    "macros",
    "http-client",
    "ws-client",
] }
ethers = { version = "2.0", default-features = false, features = ["rustls"] }
eyre = { version = "0.6.8", default-features = false }
anyhow = { version = "1.0.95", default-features = false }
